# ai-spec-driven-development

hackathon_02/phase_01/: README.md  index.js  main.py  pyproject.toml
hackathon_02/phase_01/.specify/memory/: constitution.md
hackathon_02/phase_01/history/prompts/console-todo-app/: 001-specify-console-todo-app.spec.prompt.md  002-create-impl-plan.plan.prompt.md  003-generate-tasks.tasks.prompt.md  004-implement-todo-app.tasks.prompt.md
hackathon_02/phase_01/history/prompts/constitution/: 001-create-project-constitution.constitution.prompt.md
hackathon_02/phase_01/specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
hackathon_02/phase_01/specs/001-console-todo-app/checklists/: requirements.md
hackathon_02/phase_01/src/todo_app/: __init__.py
hackathon_02/phase_01/src/todo_app/cli/: __init__.py  interface.py
hackathon_02/phase_01/src/todo_app/commands/: __init__.py  command_processor.py
hackathon_02/phase_01/src/todo_app/models/: __init__.py  todo.py
hackathon_02/phase_01/src/todo_app/services/: __init__.py  todo_store.py
physical-ai-humanoid-robotics-book/: docusaurus.config.js  package-lock.json  package.json
physical-ai-humanoid-robotics-book/.specify/memory/: constitution.md
physical-ai-humanoid-robotics-book/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
physical-ai-humanoid-robotics-book/frontend_book/: README.md  docusaurus.config.ts  package-lock.json  package.json  quickstart.md  sidebars.ts  tsconfig.json
physical-ai-humanoid-robotics-book/specs/004-vla/: plan.md  (+5 more)
(+103 files in other folders)
