[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools"

[project]
name = "console-todo-app"
version = "0.1.0"
description = "A simple in-memory console todo application"
authors = [{name = "Developer", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
todo-app = "main:main"

[tool.setuptools.packages.find]
where = ["src"]